--- a/website-autoescola/index.html
+++ b/website-autoescola/index.html
@@ -21,7 +21,7 @@
         <nav class="menu ">
             <ul >
                 <li ><img src="imagens/leoni.png" alt=""></li>
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Procedimento</a></li>
                 <li><a href="#">CNH</a></li>
                 <li><a href="http://api.whatsapp.com/send?1=pt_BR&phone=5543984378610" target="_blank">Orçamento</a></li>
                 <li><a href="#">Sobre nós</a></li>
@@ -149,10 +149,16 @@
                      <p>Exemplos: automóvel, picape / pick up, utilitário  / SUV, Van.</p> 
                 </div>
                 <div class="item">
+                    <img src="imagens/inclusao.png" alt="">
+                    <h1>Inclusão</h1>
+                    <h3>Também fazemos a inclusão de categorias, sendo Categoria A ou B.</h3>
+                    <p>Caso você tenha uma categoria e queira adquirir outra, fale conosco.</p> 
+               </div>
+                <div class="item">
                     <img src="imagens/carteira.png" alt="">
                     <h1>Renovação</h1>
-                    <h3>Fazemos a renovação da CNH ....</h3>
-                    <p>Exemplos: caminhão, caminhonete, van de carga.</p> 
+                    <h3>Fazemos a renovação da CNH</h3>
+                    <p>Caso sua carteina venceu, e você queria renovar, fale conosco.</p> 
                     <button><a href="">Renovar Carteira!</a></button>
                 </div>
             </div>
